--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register - CoinZap NG</title>
+  <title>Login - CoinZap NG</title>
   <style>
     body { font-family: Arial; background:#f5f5f5; display:flex; justify-content:center; align-items:center; height:100vh; }
     form { background:white; padding:30px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
@@ -12,12 +12,12 @@
   </style>
 </head>
 <body>
-  <form action="/register" method="POST">
-    <h2>Register</h2>
+  <form action="/login" method="POST">
+    <h2>Login</h2>
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Register</button>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <button type="submit">Login</button>
+    <p>No account? <a href="register.html">Register</a></p>
   </form>
 </body>
 </html>
